<resources>
    <string name="app_name">Geoqq</string>

    <string name="login_hint">Your login..</string>
    <string name="app_logo_name">GEOqq</string>
    <string name="sign_in_button_caption">Sign In</string>

    <string name="sign_up_button_caption">Sign Up</string>
    <string name="password_hint">Your password..</string>
    <string name="sign_up_screen_header">Sign Up</string>
    <string name="sign_up_confirm_button_caption">Confirm</string>
    <string name="password_confirmation_hint">Password again..</string>

    <string name="go_menu_option">GO</string>
    <string name="go_menu_option_description">Chatting within the radius</string>
    <string name="profile_menu_option">Profile</string>
    <string name="profile_menu_option_description">View your data</string>
    <string name="mates_menu_option">Mates</string>
    <string name="mates_menu_option_description">Met people</string>

    <string name="sending_message_hint">Type your text..</string>

    <string name="user_action_add_friend">Add friend</string>
    <string name="user_action_remove_friend">Remove Friend</string>
    <string name="user_action_user_added_message">The user has been requested for friendship!</string>

    <string name="profile_confirm_button">Confirm</string>
    <string name="profile_avatar_upload">Upload</string>
    <string name="profile_personal_data_section_title">Personal Data</string>
    <string name="profile_personal_data_section_username">Username</string>
    <string name="profile_personal_data_section_about_me">About Me</string>
    <string name="profile_security_section_title">Security</string>
    <string name="profile_security_section_new_password">New Password</string>
    <string name="profile_security_section_password_hint">New password..</string>
    <string name="profile_security_section_confirm_new_password">Repeat New Password</string>
    <string name="profile_security_section_confirm_password_hint">Confirm new password..</string>
    <string name="profile_privacy_section_title">Privacy</string>
    <string name="profile_privacy_section_hit_up">Can anybody hit me up?</string>
    <string name="profile_data_saved">Your profile data has been saved!</string>
    <string name="go_button_caption">GO</string>
    <string name="sending_button_description">Send Button</string>
    <string name="friend_request_card_button_caption">Check</string>
    <string name="new_mates_requests">You have some new friends requests!</string>

    <string-array name="hit_up_variants">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="component_dialog_error_neutral_button_caption">Got it</string>

    <string name="fragment_base_show_message_action_dismiss_text">Dismiss</string>

    <!-- Transitions: -->

    <string name="transition_mate_chats_to_mate_chat">mate_chats_to_mate_chat</string>

    <!--  Errors:  -->

    <string name="error_dialog_title">Error</string>

    <string name="error_image_picking_failed">Image picking has been failed!</string>

    <string name="error_sign_in_data_incorrect">Incorrect Sign In data!</string>
    <!-- TODO: specify it: -->
    <string name="error_sign_in_failed">Signing In has been failed!</string>

    <string name="error_sign_up_data_incorrect">Incorrect Sign Up data!</string>
    <!-- TODO: specify it: -->
    <string name="error_sign_up_failed">Signing Up has been failed!</string>

    <string name="error_location_lacking_location_permissions">Sorry, but it isn\'t possible to use the app without providing your location!</string>
    <string name="error_location_services_not_enabled">Sorry, but it isn\'t possible to use the app without enabling location services (GPS and Network)!</string>
    <string name="error_gms_api_not_available">Sorry, but it isn\'t possible to use the app without having GMS API available!</string>

    <string name="error_chat_message_incorrect">Incorrect message!</string>
    <!-- TODO: specify it: -->
    <string name="error_chat_message_sending_failed">Message sending has been failed!</string>

    <string name="error_my_profile_data_incorrect">The provided data was incorrect!</string>
    <!-- TODO: specify it: -->
    <string name="error_my_profile_saving_failed">Profile saving has been failed!</string>
    <string name="mate_chat_menu_show_user_info_action_title">Show user info..</string>
    <string name="profile_security_section_current_password">Current Password</string>

    <!-- DATA Errors: -->

    <string name="error_unknown_database_error">Unknown database error has been occurred!</string>

    <string name="error_network_response_unknown_error">Unknown network error!</string>
    <string name="error_local_refresh_token_not_found">Local refresh token hasn\'t been found!</string>
    <string name="error_local_refresh_token_invalid">Local refresh token is invalid!</string>
    <string name="error_local_access_token_not_found">Local access token hasn\'t been found!</string>
    <string name="error_invalid_token">Token is invalid!</string>
    <string name="error_network_request_unknown_failure">Unknown network request failure has been gotten!</string>

    <string name="error_image_loading_failed">Image loading process has been failed!</string>
    <string name="error_image_saving_failed">Image saving process has been failed!</string>
    <string name="error_image_decoding_failed">Image decoding process has been failed!</string>

</resources>