<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:theme="@style/Theme.Geoqq.MyProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/windowBackground"
        android:transitionGroup="true">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@id/confirm_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/avatar_section"
                    style="@style/MaterialCardView.Circular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.constraintlayout.utils.widget.ImageFilterView
                            android:id="@+id/user_avatar"
                            android:layout_width="128dp"
                            android:layout_height="128dp"
                            android:background="?attr/colorSurfaceContainerHighest"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:scaleType="centerCrop"/>

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/avatar_guideline_horizontal_50"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintGuide_percent="0.5" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/plus_icon"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginBottom="4dp"
                            app:layout_constraintBottom_toTopOf="@id/avatar_guideline_horizontal_50"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:srcCompat="@drawable/ic_plus"
                            app:tint="?attr/colorOnSurface" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/avatar_guideline_horizontal_50"
                            android:layout_marginTop="4dp"
                            android:text="@string/profile_avatar_upload"
                            android:textAppearance="?attr/textAppearanceLabelLarge"
                            android:textColor="?attr/colorOnSurface"/>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/upload_avatar_button"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@android:color/transparent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/personal_data_section"
                    style="@style/MaterialCardView.EasyRounded"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/avatar_section"
                    app:layout_constraintWidth_percent="0.7">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="20dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="8dp">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/ProfileCardMaterialTextView.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/profile_personal_data_section_title" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/ProfileCardMaterialTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="12dp"
                            android:text="@string/profile_personal_data_section_username" />

                        <include
                            android:id="@+id/username_input"
                            layout="@layout/component_large_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/ProfileCardMaterialTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="12dp"
                            android:text="@string/profile_personal_data_section_about_me" />

                        <include
                            android:id="@+id/about_me_input"
                            layout="@layout/component_large_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="8dp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/security_data_section"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/personal_data_section"
                    app:layout_constraintWidth_percent="0.7">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="20dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="8dp">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/ProfileCardMaterialTextView.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/profile_security_section_title" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/ProfileCardMaterialTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="12dp"
                            android:text="@string/profile_security_section_password" />

                        <include
                            android:id="@+id/password_input"
                            layout="@layout/component_large_password_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="8dp" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/ProfileCardMaterialTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="12dp"
                            android:text="@string/profile_security_section_confirm_password" />

                        <include
                            android:id="@+id/password_confirmation_input"
                            layout="@layout/component_large_password_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="8dp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/privacy_data_section"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/security_data_section"
                    app:layout_constraintWidth_percent="0.7">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="20dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="8dp">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/ProfileCardMaterialTextView.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/profile_privacy_section_title" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/ProfileCardMaterialTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="12dp"
                            android:text="@string/profile_privacy_section_hit_up" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="8dp"
                            android:minHeight="48dp"
                            android:textAppearance="?attr/textAppearanceTitleLarge"
                            android:textSize="24sp"
                            style="@style/MaterialDropdownTextInputLayout">

                            <com.qubacy.geoqq.ui.common.component.combobox.view.ComboBoxView
                                android:id="@+id/privacy_hit_up"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/MaterialTextInputEditText.High"
                                android:inputType="none"/>

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/profile_confirm_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>